# Real-time-Video-Processing

./: CMakeLists.txt  Main.cpp  README.md
include/: TrackBarCallbacks.h  VideoProcessing.h
source/: TrackBarCallbacks.cpp  VideoProcessing.cpp
